--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
+    "framer-motion": "^11.15.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
